objects/advpm__Global_Settings__c.object
<CustomObject>
    <customHelpPage>advpm__HelpGlobalSettings</customHelpPage>
    <fields>
        <fullName>advpm__Customer_Portal_Welcome__c</fullName>
        <inlineHelpText>Message to be shown on Customer Portal Welcome Component</inlineHelpText>
        <label>Portal Welcome Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>advpm__Default_Content_Type_ID__c</fullName>
        <label>Default Content Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Default_Content_Type_Name__c</fullName>
        <label>Default Content Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Default_Content_Type__c</fullName>
        <formula>IF( advpm__Default_Content_Type_ID__c = &quot;&quot;, HYPERLINK(&quot;/apex/advpm__ContentTypeSelect?source=AdvologixSetup&amp;retURL=/apex/advpm__AdvologixSetup?selTab=tabGeneralSettings&quot;, &quot;Select Content Type&quot;,&quot;_self&quot;), advpm__Default_Content_Type_Name__c &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/advpm__ContentTypeSelect?source=AdvologixSetup&amp;id=&quot; &amp; advpm__Default_Content_Type_ID__c &amp; &quot;&amp;retURL=/apex/advpm__AdvologixSetup?iselTab=tabGeneralSettings&quot;, &quot;change&quot;,&quot;_self&quot;) &amp; &quot;]&quot;)</formula>
        <label>Default Content Type for Invoices:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Default_Library_ID__c</fullName>
        <label>Default Library ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Default_Library_Name__c</fullName>
        <label>Default Library Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Default_Library__c</fullName>
        <formula>IF(advpm__Default_Library_ID__c = &quot;&quot;, &quot;- None -&quot;, advpm__Default_Library_Name__c) &amp; 
&quot; [&quot; &amp; HYPERLINK(&quot;/apex/advpm__LibrarySelect?id=&quot; &amp; advpm__Default_Library_ID__c &amp; &quot;&amp;retURL=/apex/advpm__AdvologixSetup?tb=Settings&quot;, &quot;change&quot;,&quot;_self&quot;) &amp; &quot;]&quot;</formula>
        <label>Default Content Library for New Content:</label>
        <type>Text</type>
    </fields>
    <label>Global Settings</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>